<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.stenleone.clenner.model.MemoryCleaningStateData" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/white">

        <TextView
            android:id="@+id/titleText"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/memory_cleaning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/langSwitch"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_us_lang"
            app:layout_constraintBottom_toBottomOf="@+id/titleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/progress_bg"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/ic_memory_cleaning_progress_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:translationZ="5dp"
            app:cardBackgroundColor="@color/blue_main"
            app:cardCornerRadius="90dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/progress_bg"
            app:layout_constraintEnd_toEndOf="@+id/progress_bg"
            app:layout_constraintStart_toStartOf="@+id/progress_bg"
            app:layout_constraintTop_toBottomOf="@+id/titleText">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:cpb_background_progressbar_color="@color/transparent_50"
                app:cpb_progress="0"
                app:cpb_progressbar_color="@color/white"
                app:cpb_round_border="true" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/consumedText"
                    style="@style/AdditionalTextCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/consumed"
                    app:layout_constraintBottom_toTopOf="@+id/textConsumedInMb"
                    app:layout_constraintEnd_toStartOf="@+id/mbProgressText"
                    app:layout_constraintStart_toStartOf="@+id/textConsumedInMb" />

                <TextView
                    android:id="@+id/textConsumedInMb"
                    style="@style/CardExtraText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="1dp"
                    android:text="@{String.valueOf(data.consumedMemory)}"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="2202" />

                <TextView
                    android:id="@+id/mbProgressText"
                    style="@style/CardTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="9dp"
                    android:fontFamily="@font/nunito_sans_extra_bold"
                    android:text="@string/mb"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textConsumedInMb"
                    app:layout_constraintStart_toEndOf="@+id/textConsumedInMb"
                    app:layout_constraintTop_toTopOf="@+id/textConsumedInMb" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/TotalMemoryCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp"
            app:layout_constraintBottom_toTopOf="@+id/start"
            app:layout_constraintEnd_toStartOf="@id/ResidualFilesCard"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bg">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cardTotalMemoryText"
                    style="@style/CardTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/total_memory"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cardTotalMemoryMainText"
                    style="@style/CardExtraText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:text="@{String.valueOf(data.totalMemory)}"
                    android:textColor="@color/blue_main"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/cardTotalMemoryText"
                    app:layout_constraintStart_toStartOf="@+id/cardTotalMemoryText"
                    app:layout_constraintTop_toBottomOf="@+id/cardTotalMemoryText" />

                <TextView
                    android:id="@+id/cardTotalMemoryMbText"
                    style="@style/CardTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/mb"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cardTotalMemoryMainText"
                    app:layout_constraintTop_toBottomOf="@+id/cardTotalMemoryText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ResidualFilesCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp"
            app:layout_constraintBottom_toTopOf="@+id/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/TotalMemoryCard"
            app:layout_constraintTop_toBottomOf="@+id/progress_bg">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cardResidualFilesText"
                    style="@style/CardTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/usage_memory"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cardResidualFilesMainText"
                    style="@style/CardExtraText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:text="@{String.valueOf(data.usageProcent)}"
                    android:textColor="@color/blue_main"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/cardResidualFilesText"
                    app:layout_constraintStart_toStartOf="@+id/cardResidualFilesText"
                    app:layout_constraintTop_toBottomOf="@+id/cardResidualFilesText" />

                <TextView
                    android:id="@+id/cardResidualFilesMbText"
                    style="@style/CardTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="%"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cardResidualFilesMainText"
                    app:layout_constraintTop_toBottomOf="@+id/cardResidualFilesText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <carbon.widget.LinearLayout
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@color/blue_main"
            app:carbon_cornerRadius="20dp"
            app:carbon_elevation="15dp"
            app:carbon_elevationShadowColor="@color/blue_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="10dp"
                android:text="@string/start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </carbon.widget.LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>